# mic-platformv3

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml  RenamerPage.qml
src/: IModule.h  main.cpp
src/logic/: Renamer.cpp  Renamer.h  Settings.h
src/modules/: RenamerModule.cpp  RenamerModule.h
src/utils/: FileUtils.cpp  FileUtils.h
